dynamic pwa manifest; i18n ready event for early use

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "kitty-printer",
   "theme_color": "#000000",
   "background_color": "#000000",
-  "display": "fullscreen",
+  "display": "standalone",
   "scope": "/",
   "start_url": "/",
   "orientation": "any",
